bin/testsuite/tests/compiler/src/errors/compiler2728.swg
#global testerror "Err0478"

#[Swag.Discardable]
func toto() {}
